# random_sun_tzu

./: index.html  pyproject.toml  style.css
data/: all_quotes.txt
fetch/: quote_fetch.py
