[tool.poetry]
name = "sun-tzu-random-quote"
version = "0.1.0"
description = ""
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]
readme = "README.md"
packages = [{include = "sun_tzu_random_quote"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
